exercise9/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: quicklabs9
  labels:
    name: quicklabs9
