exercise9/ingress-nginx-admission.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller-admission
  namespace: quicklabs9
spec:
  ports:
  - name: https-webhook
    port: 443
    protocol: TCP
    targetPort: webhook
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  type: ClusterIP
