exercise9/service-apparel.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apparels-service
  namespace: quicklabs9
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp-apparels
  type: ClusterIP
