exercise9/service-video.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: video-service
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp-video
  type: ClusterIP
